--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/appacademy-starters/routing-roundup-starter#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "mocha": "^7.1.1"
   }
 }
