--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mocha": "^7.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
